# git-sub

./: .gitignore  LICENSE  README.md  git-sub  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_gitsub.py
