[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "git-sub"
version = "0.0.0"
description = "Submodule init + optional Git LFS pull — single Python script"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
target-version = "py38"
line-length = 120
extend-include = ["git-sub"]
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
